# ai-financial-market

ai-rag/: README.md  pyproject.toml  results.json  results.txt
ai-rag/src/: main.py  model.py  processor.py  tooling.py  utils.py
